# pro-stock-analyzer-v1.2

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  DEVLOG.md  Makefile  Makefile.v1.2_backup  NVDA_deep_analysis_en.md  NVDA_deep_analysis_th.md  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: tests.yml
Backend_System/: CashFlowModel.py  CashFlowModel.py.bak  CashFlowModelas.py  Settings.py  calculater_all.py  calculater_all.py.bak  debag_cashflow.py  financials_provider.py  gpt_api.py  models.py  valuetion_financials.py
backend/: __init__.py  app.py  config.py  engine.py  loader.py  logging_config.py  narrator.py
backend/ratios/: __init__.py  banking.py  base.py  buffett.py  cash_flow.py  cost_of_capital.py  dividend.py  efficiency.py  growth.py  insurance.py  intrinsic_value.py  leverage.py  liquidity.py  profitability.py  quality.py  reit.py  risk.py  semiconductor.py  software_saas.py  valuation.py
data/: NVDA_financials.json
docs/: FORMULAS.md
frontend/: app.js  index.html  style.css
smart_fetch/: DEVLOG_v1.3_entry.md  INSTALL_SMART_FETCH.md  apply_smart_fetch.py
smart_fetch/backend/: cache_manager.py  fetcher.py
smart_fetch/tests/: test_cache_manager.py
stockai/: DEVLOG.md  README.md  __init__.py  api.py  cli.py  config.py  data_loader.py  feature_engineering.py  features.py  harvester.py  pipeline.py  universe.txt
stockai/ai/: __init__.py  predictor.py  trainer.py
tests/: conftest.py  full_test_suite.py  smoke_test.py  test_api_e2e.py  test_benchmarks.py  test_engine_integration.py  test_property_based.py  test_ratios_unit.py
