[project]
name = "pro-stock-analyzer"
version = "1.2.0"
description = "Professional financial ratio analysis — 200+ formulas across 18 categories"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "memory-profiler>=0.61",
    "line-profiler>=4.1",
]

# ═══════════════════════════════════════════════════════════════════════
# pytest configuration
# ═══════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "unit: Fast isolated tests (< 1s each)",
    "integration: Tests that use multiple modules together",
    "e2e: End-to-end tests via API",
    "slow: Tests that take > 1 second",
    "real_data: Tests that need real financial data",
    "benchmark: Performance benchmarks",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ═══════════════════════════════════════════════════════════════════════
# Coverage configuration
# ═══════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

# ═══════════════════════════════════════════════════════════════════════
# Ruff — Fast linter (replaces flake8, isort, pylint, etc.)
# ═══════════════════════════════════════════════════════════════════════
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, etc.)
    "I",    # isort (import sorting)
    "B",    # bugbear (common bugs)
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # simplify (redundant code)
    "C4",   # comprehensions
    "PIE",  # misc improvements
    "RET",  # return statement issues
    "PL",   # pylint essential checks
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments (fine for compute() methods)
    "PLR2004", # magic values (financial constants are OK)
    "B008",   # function calls in defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "B011"]   # allow magic numbers + assert False

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ═══════════════════════════════════════════════════════════════════════
# Black — Code formatter (opinionated, no config needed)
# ═══════════════════════════════════════════════════════════════════════
[tool.black]
line-length = 100
target-version = ["py310"]

# ═══════════════════════════════════════════════════════════════════════
# Mypy — Static type checker
# ═══════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false     # gradual typing — start relaxed
no_implicit_optional = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "backend.ratios.*"
disallow_untyped_defs = false     # ratio modules use Optional heavily
